--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "scripts": {
     "start:dev": "nodemon",
     "build": "tsc",
-    "start": "node -r module-alias/register dist/main.js",
-    "start:docker": "npm run build && docker compose build && docker compose up",
+    "start": "npm run build && docker compose build && docker compose up",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
